alignments issues in mobile fixed

--- a/src/output.css
+++ b/src/output.css
@@ -3914,4 +3914,60 @@ button {
     gap: 10px;
     padding: 20px;
   }
+
+
+  .portfolio-title{
+    font-size: 28px;
+  }
+
+  .strip-slide-up span.row{
+    line-height: 32px;
+  }
+
+  .flip-word-heading{
+    font-size: 28px;
+  }
+
+  .portfolio-timeline{
+    padding: 0px 20px;
+    font-size: 12px;
+  }
+
+  .index-container-buttons a button{
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  .index-container-buttons{
+    margin-bottom: 50px;
+  }
+
+  .career-section{
+    padding-top: 0px;
+  }
+
+  .summary-heading{
+    margin-bottom: 10px;
+  }
+
+  .intro-profile{
+    padding-bottom: 10px;
+  }
+
+  .total-experience-heading{
+    margin-top: 0px;
+    margin-bottom: 5px;
+  }
+
+  .lets-connect-container > div{
+    gap: 0px;
+  }
+
+  .lets-connect-col-1 .last{
+    margin-bottom: 30px;
+  }
+
+  .container-scroll-row{
+    margin-top: 80px;
+  }
 }
